--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+html{
+font-family: "Candal", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
     display: flex;
     flex-direction: column;
